--- a/css/inputtext.css
+++ b/css/inputtext.css
@@ -60,12 +60,12 @@
 	left: -1px;
 	width: 100%;
 	height:100%;
-	border-bottom: 2px solid #8d8d8d;
+	border-bottom: 2px solid #eee;
 }
 
 .input__label--hoshi::after {
 	margin-top: 0;
-	border-bottom: 2px solid #8d8d8d;
+	border-bottom: 2px solid #eee;
 	-webkit-transform: translate3d(-100%, 0, 0);
 	transform: translate3d(-100%, 0, 0);
 	-webkit-transition: -webkit-transform 0.3s;
@@ -73,7 +73,7 @@
 }
 
 .input__label--hoshi-color-1::after {
-	border-color: #fff;
+	border-color: #000;
 }
 
 .input__label--hoshi-color-2::after {
